# endless_tunnel_multiplatform_tempelate

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
RESOURCES/assets/maps/: CapitanAfrica_0.map  CapitanAfrica_2.map
RESOURCES/projects/make/: bg_1.xcf
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/maps/: CapitanAfrica_0.map  CapitanAfrica_1.map
app/src/main/cpp/: CMakeLists.txt  android_main.cpp  input_util.cpp  input_util.hpp  jni_util.cpp  native_engine.cpp  native_engine.hpp
app/src/main/cpp/SystemAbstraction/: CMakeLists.txt  OpenSLWrap.cpp  OpenSLWrap.hpp  demo.cpp  demo.hpp  system_abstraction.cpp  system_abstraction.hpp  system_audio.cpp  system_audio.hpp  system_billing.cpp  system_billing.hpp  system_log.hpp  system_opengl_include.hpp  system_paths.cpp  system_paths.hpp  system_resources.cpp
app/src/main/cpp/SystemAbstraction/Application/: ascii_to_geom.cpp  our_shader.cpp  play_scene.cpp  play_scene.hpp  shader.cpp  text_renderer.cpp  ui_scene.hpp
app/src/main/cpp/SystemAbstraction/Application/CapAfri/: AnimateVariable.hpp  CMakeLists.txt  CapAfri.pri  PostProcessor.cpp  PostProcessor.hpp  Shader.cpp  Shader.hpp  button.cpp  button.hpp  camera.hpp  camera_safe_area.hpp  debug_draw.cpp  debug_draw.hpp  demo.cpp  demo.hpp  design_graffiti_agentorange_www_myfontfree_com.ttf.hpp  game.cpp  game.hpp  game_config.cpp  game_config.hpp  level.cpp  level.hpp  map_editor.cpp  map_editor.hpp  products.h  renderable_object.hpp  transformation.hpp
app/src/main/cpp/SystemAbstraction/Application/CapAfri/Bodies/: background_body.cpp  background_body.hpp  car_body.cpp  car_body.hpp  coin_circle_body.cpp  coin_circle_body.hpp  coordinates_body.cpp  coordinates_body.hpp  ground_body.cpp  ground_body.hpp  ground_body_chain.cpp  ground_body_chain.hpp  meta_body.cpp  meta_body.hpp  mushroom.cpp  mushroom.hpp
app/src/main/cpp/SystemAbstraction/Application/CapAfri/data/: car.png.hpp  ground.png.hpp  ground_1.png.hpp  ground_2.png.hpp  kolo.png.hpp  red_dot.png.hpp
app/src/main/cpp/SystemAbstraction/Application/CapAfri/gui/: button.cpp  button.hpp  radio_button.cpp  radio_button.hpp  radio_button_manager.cpp  radio_button_manager.hpp  widget.cpp  widget.hpp
app/src/main/cpp/SystemAbstraction/Application/CapAfri/gui/gui_v2/: widget.cpp  widget.hpp
app/src/main/cpp/SystemAbstraction/Application/Tunnel/: ascii_to_geom.cpp  common.hpp  dialog_scene.cpp  engine.hpp  joystick-support.hpp  map_editor_scene.cpp  map_editor_scene.hpp  our_shader.cpp  play_capafri_scene.cpp  play_capafri_scene.hpp  play_scene.cpp  play_scene.hpp  scene.cpp  scene.hpp  scene_manager.cpp  scene_manager.hpp  scene_select_map.cpp  scene_select_map.hpp  scene_tuning_vehicle.cpp  scene_tuning_vehicle.hpp  shader.cpp  text_renderer.cpp  ui_scene.cpp  ui_scene.hpp  util.hpp  vertexbuf.cpp  welcome_scene.cpp  welcome_scene.hpp
app/src/main/cpp/SystemAbstraction/Application/Tunnel/data/: design_graffiti_agentorange_www_myfontfree_com.ttf.hpp  our_shader.inl  strings.inl
app/src/main/cpp/SystemAbstraction/Application/data/: coin_2.png.hpp  cube_geom.inl
app/src/main/cpp/SystemAbstraction/Application/libs/Box2D/: Box2D.pri  CMakeLists.txt
app/src/main/cpp/SystemAbstraction/Application/libs/SOIL/: soil_qt.pri
app/src/main/cpp/SystemAbstraction/Application/libs/glm/: glm_qt.pri
app/src/main/cpp/SystemAbstraction/Application/libs/glm/detail/: func_geometric.inl
app/src/main/cpp/SystemAbstraction/Application/libs/lib_config/: CMakeLists.txt  lib_config.cpp  lib_config.hpp
app/src/main/cpp/SystemAbstraction/Application/libs/lib_system/: CMakeLists.txt  fps.cpp  fps.hpp
app/src/main/cpp/SystemAbstraction/Application/libs/libfreetype/: CMakeLists.txt  libfreetype.pri
app/src/main/cpp/SystemAbstraction/Application/libs/libfreetype/include/freetype/config/: ftmodule.h
app/src/main/cpp/SystemAbstraction/Application/libs/libfreetype/src/autofit/: aflatin2.c
app/src/main/cpp/SystemAbstraction/Application/libs/nuklear/: CMakeLists.txt
app/src/main/cpp/SystemAbstraction/Application/libs/nuklear/implementation/: CMakeLists.txt  nuklear_gles2.cpp  nuklear_gles2.hpp
app/src/main/cpp/SystemAbstraction/Game/: ascii_to_geom.cpp  common.hpp  engine.hpp  input_util.cpp  input_util.hpp  jni_util.cpp  jni_util.hpp  our_shader.cpp  play_scene.cpp  play_scene.hpp  scene_manager.cpp  scene_manager.hpp  sfxman.cpp  sfxman.hpp  shader.cpp  text_renderer.cpp  ui_scene.cpp  vertexbuf.cpp
app/src/main/cpp/SystemAbstraction/Game/data/: tunnel_geom.inl
app/src/main/cpp/SystemAbstraction/data_headers/extra_font/: Cousine-Regular.ttf.hpp  DroidSans.ttf.hpp  Karla-Regular.ttf.hpp  ProggyClean.ttf.hpp  ProggyTiny.ttf.hpp  Raleway-Bold.ttf.hpp  Roboto-Bold.ttf.hpp  Roboto-Light.ttf.hpp  Roboto-Regular.ttf.hpp  kenvector_future.ttf.hpp  kenvector_future_thin.ttf.hpp
app/src/main/cpp/SystemAbstraction/data_headers/icon/: checked.png.hpp  cloud.png.hpp  computer.png.hpp  copy.png.hpp  default.png.hpp  delete.png.hpp  desktop.png.hpp  directory.png.hpp  edit.png.hpp  export.png.hpp  font.png.hpp  home.png.hpp  img.png.hpp  movie.png.hpp  music.png.hpp  next.png.hpp  pause.png.hpp  pen.png.hpp  phone.png.hpp  plane.png.hpp  play.png.hpp  prev.png.hpp  rocket.png.hpp  settings.png.hpp  stop.png.hpp  text.png.hpp  tools.png.hpp  unchecked.png.hpp  volume.png.hpp  wifi.png.hpp
app/src/main/cpp/SystemAbstraction/data_headers/images/: image1.png.hpp  image2.png.hpp  image3.png.hpp  image4.png.hpp  image5.png.hpp  image6.png.hpp  image7.png.hpp  image8.png.hpp  image9.png.hpp
app/src/main/cpp/jni/: CMakeLists.txt  aunixdatagramsocket.cpp  aunixdatagramsocket.h  cdelegate.h  ctimer.cpp  ctimer.h  cudpsocket.cpp  cudpsocket.h  cunixdatagramsocket.cpp  cunixdatagramsocket.h  epoll.cpp  epoll.hpp  hello-jni.cpp  loop.hpp  main_2.cpp  main_2.h
app/src/main/java/com/google/sample/tunnel/: MainActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
qt_endless_tunnel/: CMakeLists.txt  main.cpp  qt_endless_tunnel.pro
(+3 files in other folders)
